# whalECS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  cppcheck.out
lib/: CorradePointer.h
src/: ComponentManager.cpp  DynamicBitset.cpp  DynamicBitset.h  ECS.cpp  ECS.h  Entity.cpp  EntityManager.cpp  EntityManager.h  Expected.h  Serializer.cpp  Serializer.h  SystemManager.cpp  Traits.h  TypeName.h
